--- a/strand/iOS/Strand/Strand/DFCommentViewController.xib
+++ b/strand/iOS/Strand/Strand/DFCommentViewController.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6250" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DFCommentViewController">
@@ -10,6 +10,7 @@
                 <outlet property="sendButton" destination="QrE-bK-fZK" id="sXl-cH-CwY"/>
                 <outlet property="tableView" destination="Idt-Bp-Mrh" id="k0b-2j-HLv"/>
                 <outlet property="textField" destination="Pfw-9f-UHS" id="1Zc-VB-1uS"/>
+                <outlet property="textFieldItem" destination="SBf-XN-PUW" id="ZyD-ft-pYZ"/>
                 <outlet property="toolbar" destination="OZb-rB-V1d" id="8eI-uq-pQl"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -26,7 +27,7 @@
                 <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OZb-rB-V1d">
                     <rect key="frame" x="0.0" y="556" width="600" height="44"/>
                     <items>
-                        <barButtonItem style="plain" id="SBf-XN-PUW">
+                        <barButtonItem style="plain" id="SBf-XN-PUW" userLabel="Text field item">
                             <textField key="customView" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Add a comment" minimumFontSize="17" id="Pfw-9f-UHS">
                                 <rect key="frame" x="16" y="7" width="507" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -55,6 +56,7 @@
                 <constraint firstAttribute="trailing" secondItem="Idt-Bp-Mrh" secondAttribute="trailing" id="ia8-wO-38Y"/>
                 <constraint firstItem="Idt-Bp-Mrh" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="qCs-Hx-l5f"/>
             </constraints>
+            <point key="canvasLocation" x="335" y="419"/>
         </view>
     </objects>
 </document>
