--- a/strand/iOS/Strand/Strand/DFEvaluatedPhotoViewController.xib
+++ b/strand/iOS/Strand/Strand/DFEvaluatedPhotoViewController.xib
@@ -7,39 +7,91 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DFEvaluatedPhotoViewController">
             <connections>
-                <outlet property="imageView" destination="2EI-BF-puF" id="l4P-LU-Stp"/>
-                <outlet property="profileStackView" destination="bPq-iK-f1R" id="16W-ej-7JW"/>
-                <outlet property="view" destination="hg1-qU-MTo" id="MqH-Um-uCf"/>
+                <outlet property="likeBarButtonItem" destination="gOI-Kq-Vqs" id="0nC-t1-Fnu"/>
+                <outlet property="recipientsProfileStackView" destination="ibH-dU-jON" id="i2l-b0-cYa"/>
+                <outlet property="sendButton" destination="uTO-WJ-lX6" id="OYT-Rx-cPC"/>
+                <outlet property="senderProfileStackView" destination="VOD-io-kg3" id="2Ck-hr-mM8"/>
+                <outlet property="tableView" destination="gGV-RF-dqd" id="e4d-fd-JGr"/>
+                <outlet property="textField" destination="8FO-g3-wd1" id="Js8-RE-Yx5"/>
+                <outlet property="textFieldItem" destination="GWA-hP-Iaq" id="Ddq-kt-hHW"/>
+                <outlet property="toolbar" destination="ahP-4i-91Q" id="BcT-Hu-R7n"/>
+                <outlet property="view" destination="mpa-i4-xv8" id="uaF-md-SiN"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="hg1-qU-MTo">
+        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="mpa-i4-xv8">
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bPq-iK-f1R" customClass="DFProfileStackView">
-                    <rect key="frame" x="20" y="8" width="560" height="45"/>
-                    <color key="backgroundColor" red="0.90588241820000004" green="0.45490199329999997" blue="0.1215686351" alpha="1" colorSpace="deviceRGB"/>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" allowsSelectionDuringEditing="YES" allowsMultipleSelectionDuringEditing="YES" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="gGV-RF-dqd">
+                    <rect key="frame" x="0.0" y="66" width="600" height="534"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <connections>
+                        <outlet property="dataSource" destination="-1" id="YtH-72-Of8"/>
+                        <outlet property="delegate" destination="-1" id="kPh-ct-OIy"/>
+                    </connections>
+                </tableView>
+                <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ahP-4i-91Q">
+                    <rect key="frame" x="0.0" y="556" width="600" height="44"/>
+                    <items>
+                        <barButtonItem image="LikeOnToolbarIcon.png" id="gOI-Kq-Vqs" userLabel="Like Item">
+                            <connections>
+                                <action selector="likeItemPressed:" destination="-1" id="5cf-td-hsa"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem style="plain" id="GWA-hP-Iaq" userLabel="Text field item">
+                            <textField key="customView" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Add a comment" minimumFontSize="17" id="8FO-g3-wd1">
+                                <rect key="frame" x="60" y="7" width="477" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                <connections>
+                                    <action selector="textDidChange:" destination="-1" eventType="editingChanged" id="SaN-sO-vAS"/>
+                                </connections>
+                            </textField>
+                        </barButtonItem>
+                        <barButtonItem title="Send" width="38" id="uTO-WJ-lX6" userLabel="Send item">
+                            <connections>
+                                <action selector="sendButtonPressed:" destination="-1" id="jqH-mO-eqL"/>
+                            </connections>
+                        </barButtonItem>
+                    </items>
+                </toolbar>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VOD-io-kg3" customClass="DFProfileStackView">
+                    <rect key="frame" x="8" y="8" width="50" height="50"/>
+                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="45" id="evf-Hc-Nei"/>
+                        <constraint firstAttribute="width" constant="50" id="eNe-mr-nH6"/>
+                        <constraint firstAttribute="height" constant="50" id="gtS-kK-zo3"/>
                     </constraints>
                 </view>
-                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="2EI-BF-puF">
-                    <rect key="frame" x="0.0" y="53" width="600" height="547"/>
-                </imageView>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ibH-dU-jON" customClass="DFProfileStackView">
+                    <rect key="frame" x="59" y="16" width="541" height="35"/>
+                    <color key="backgroundColor" red="0.90588241820000004" green="0.45490199329999997" blue="0.1215686351" alpha="1" colorSpace="deviceRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="35" id="3Rn-MY-Zfc"/>
+                    </constraints>
+                </view>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="bPq-iK-f1R" firstAttribute="top" secondItem="hg1-qU-MTo" secondAttribute="top" constant="8" id="1U6-Qk-WZE"/>
-                <constraint firstItem="2EI-BF-puF" firstAttribute="leading" secondItem="hg1-qU-MTo" secondAttribute="leading" id="FRu-Cp-Lrp"/>
-                <constraint firstItem="2EI-BF-puF" firstAttribute="top" secondItem="bPq-iK-f1R" secondAttribute="bottom" id="NTi-KH-5Ua"/>
-                <constraint firstAttribute="trailing" secondItem="bPq-iK-f1R" secondAttribute="trailing" constant="20" id="Uza-Yf-Mvp"/>
-                <constraint firstAttribute="bottom" secondItem="2EI-BF-puF" secondAttribute="bottom" id="Wdb-W2-Mqo"/>
-                <constraint firstItem="bPq-iK-f1R" firstAttribute="leading" secondItem="hg1-qU-MTo" secondAttribute="leading" constant="20" id="fu1-Jp-rKo"/>
-                <constraint firstAttribute="trailing" secondItem="2EI-BF-puF" secondAttribute="trailing" id="rYo-YJ-Zev"/>
+                <constraint firstAttribute="bottom" secondItem="gGV-RF-dqd" secondAttribute="bottom" id="81M-RW-Hhu"/>
+                <constraint firstItem="VOD-io-kg3" firstAttribute="leading" secondItem="mpa-i4-xv8" secondAttribute="leading" constant="8" id="9JY-vK-N88"/>
+                <constraint firstItem="ibH-dU-jON" firstAttribute="centerY" secondItem="VOD-io-kg3" secondAttribute="centerY" id="DhR-2b-FLT"/>
+                <constraint firstItem="VOD-io-kg3" firstAttribute="top" secondItem="mpa-i4-xv8" secondAttribute="top" constant="8" id="Ed5-1o-YVi"/>
+                <constraint firstAttribute="trailing" secondItem="ahP-4i-91Q" secondAttribute="trailing" id="SkN-zI-tV1"/>
+                <constraint firstItem="gGV-RF-dqd" firstAttribute="top" secondItem="VOD-io-kg3" secondAttribute="bottom" constant="8" id="WrZ-EP-rZx"/>
+                <constraint firstAttribute="trailing" secondItem="gGV-RF-dqd" secondAttribute="trailing" id="X0I-pQ-m3J"/>
+                <constraint firstAttribute="bottom" secondItem="ahP-4i-91Q" secondAttribute="bottom" id="abf-sI-zaq"/>
+                <constraint firstItem="ibH-dU-jON" firstAttribute="leading" secondItem="VOD-io-kg3" secondAttribute="trailing" constant="1" id="j0x-VC-XdR"/>
+                <constraint firstItem="ahP-4i-91Q" firstAttribute="leading" secondItem="mpa-i4-xv8" secondAttribute="leading" id="jDu-NF-tKC"/>
+                <constraint firstAttribute="trailing" secondItem="ibH-dU-jON" secondAttribute="trailing" id="mlJ-BG-bP2"/>
+                <constraint firstItem="gGV-RF-dqd" firstAttribute="leading" secondItem="mpa-i4-xv8" secondAttribute="leading" id="t59-Ti-M7Q"/>
             </constraints>
-            <nil key="simulatedStatusBarMetrics"/>
-            <point key="canvasLocation" x="309" y="368"/>
+            <point key="canvasLocation" x="369" y="497"/>
         </view>
     </objects>
+    <resources>
+        <image name="LikeOnToolbarIcon.png" width="22" height="22"/>
+    </resources>
 </document>
