Refactor Swappable button views
Rename ImageView and add ability to have a label
move superclass logic into subclass

--- a/strand/iOS/Strand/Strand/DFSwipableButtonView.xib
+++ b/strand/iOS/Strand/Strand/DFSwipableButtonView.xib
@@ -8,20 +8,20 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="DFSwipableButtonImageView">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="DFSwipableButtonView">
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView clipsSubviews="YES" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="200" verticalCompressionResistancePriority="700" translatesAutoresizingMaskIntoConstraints="NO" id="EFR-as-Tho">
+                <view clipsSubviews="YES" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="200" verticalCompressionResistancePriority="700" translatesAutoresizingMaskIntoConstraints="NO" id="PRr-q5-rca">
                     <rect key="frame" x="43" y="0.0" width="515" height="515"/>
-                    <gestureRecognizers/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstAttribute="width" secondItem="EFR-as-Tho" secondAttribute="height" multiplier="1:1" id="vAZ-ZP-g4a"/>
+                        <constraint firstAttribute="width" secondItem="PRr-q5-rca" secondAttribute="height" multiplier="1:1" id="1TX-GI-WGX"/>
                     </constraints>
                     <connections>
-                        <outletCollection property="gestureRecognizers" destination="MM2-cw-TCR" appends="YES" id="FtM-Bq-0kY"/>
+                        <outletCollection property="gestureRecognizers" destination="MM2-cw-TCR" appends="YES" id="reB-FQ-R71"/>
                     </connections>
-                </imageView>
+                </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="l10-6U-oyL" userLabel="Button Wrapper">
                     <rect key="frame" x="153" y="525" width="295" height="65"/>
                     <subviews>
@@ -92,22 +92,22 @@
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="EFR-as-Tho" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="2sY-5G-Vas"/>
+                <constraint firstItem="xKd-Cz-PRo" firstAttribute="leading" secondItem="PRr-q5-rca" secondAttribute="leading" id="4u2-8Q-y44"/>
+                <constraint firstItem="l10-6U-oyL" firstAttribute="top" secondItem="PRr-q5-rca" secondAttribute="bottom" constant="10" id="5zL-Rm-vdB"/>
+                <constraint firstItem="xKd-Cz-PRo" firstAttribute="trailing" secondItem="PRr-q5-rca" secondAttribute="trailing" id="7iY-Zn-Xcj"/>
                 <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="xKd-Cz-PRo" secondAttribute="trailing" id="AId-so-J1d"/>
                 <constraint firstAttribute="bottom" secondItem="l10-6U-oyL" secondAttribute="bottom" priority="900" constant="10" id="H8h-um-EvH"/>
                 <constraint firstItem="xKd-Cz-PRo" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="iN0-l3-epB" secondAttribute="leading" id="U9o-fK-LxD"/>
                 <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="l10-6U-oyL" secondAttribute="bottom" constant="10" id="aBk-gS-atA"/>
-                <constraint firstItem="xKd-Cz-PRo" firstAttribute="trailing" secondItem="EFR-as-Tho" secondAttribute="trailing" id="emd-i0-ycN"/>
-                <constraint firstItem="xKd-Cz-PRo" firstAttribute="leading" secondItem="EFR-as-Tho" secondAttribute="leading" id="k1f-Kx-CUI"/>
-                <constraint firstItem="xKd-Cz-PRo" firstAttribute="top" secondItem="EFR-as-Tho" secondAttribute="top" id="lf6-5W-kKT"/>
-                <constraint firstItem="xKd-Cz-PRo" firstAttribute="bottom" secondItem="EFR-as-Tho" secondAttribute="bottom" id="m9o-Eb-Drw"/>
-                <constraint firstAttribute="centerX" secondItem="EFR-as-Tho" secondAttribute="centerX" id="nBp-Kd-wvP"/>
+                <constraint firstAttribute="centerX" secondItem="PRr-q5-rca" secondAttribute="centerX" id="ahz-A8-iMM"/>
+                <constraint firstItem="xKd-Cz-PRo" firstAttribute="bottom" secondItem="PRr-q5-rca" secondAttribute="bottom" id="fsn-Zg-Ml8"/>
+                <constraint firstItem="PRr-q5-rca" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="h6L-Et-qCw"/>
+                <constraint firstItem="xKd-Cz-PRo" firstAttribute="top" secondItem="PRr-q5-rca" secondAttribute="top" id="oyN-1W-o7a"/>
                 <constraint firstAttribute="centerX" secondItem="l10-6U-oyL" secondAttribute="centerX" id="tje-Pw-gcZ"/>
-                <constraint firstItem="l10-6U-oyL" firstAttribute="top" secondItem="EFR-as-Tho" secondAttribute="bottom" constant="10" id="xSh-YO-3Vp"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <connections>
-                <outlet property="imageView" destination="EFR-as-Tho" id="rbB-zy-0Az"/>
+                <outlet property="centerView" destination="PRr-q5-rca" id="ZCH-9O-P1x"/>
                 <outlet property="noButton" destination="lr5-fU-tFy" id="ceJ-cP-s4b"/>
                 <outlet property="otherButton" destination="pue-vE-jXM" id="baw-SH-BRr"/>
                 <outlet property="overlayImageView" destination="xKd-Cz-PRo" id="b1b-42-XCH"/>
