--- a/strand/iOS/Strand/Strand/DFIncomingViewController.xib
+++ b/strand/iOS/Strand/Strand/DFIncomingViewController.xib
@@ -8,7 +8,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DFIncomingViewController">
             <connections>
                 <outlet property="profileWithContextView" destination="zPr-Cm-BJD" id="uzr-Bk-x7m"/>
-                <outlet property="swipableButtonImageView" destination="2mx-jU-aCa" id="eaS-UA-Co4"/>
+                <outlet property="swipableButtonView" destination="2mx-jU-aCa" id="8q6-PE-Jnw"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -24,7 +24,7 @@
                         <constraint firstAttribute="height" constant="45" id="TWY-DJ-5i5"/>
                     </constraints>
                 </view>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2mx-jU-aCa" customClass="DFSwipableButtonImageView">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2mx-jU-aCa" customClass="DFSwipableButtonView">
                     <rect key="frame" x="0.0" y="61" width="600" height="539"/>
                     <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                 </view>
