--- a/strand/iOS/Strand/Strand/DFSwipableSuggestionViewController.xib
+++ b/strand/iOS/Strand/Strand/DFSwipableSuggestionViewController.xib
@@ -11,7 +11,7 @@
                 <outlet property="bottomLabel" destination="RRW-PK-CfC" id="gs9-7a-tJq"/>
                 <outlet property="peopleLabel" destination="RRW-PK-CfC" id="hpd-id-cMy"/>
                 <outlet property="profileStackView" destination="BkW-lL-hsr" id="KUf-zp-AfQ"/>
-                <outlet property="swipableButtonImageView" destination="YTX-Vv-qtQ" id="K2r-lA-QFf"/>
+                <outlet property="swipableButtonView" destination="YTX-Vv-qtQ" id="Apb-x5-Kyx"/>
                 <outlet property="view" destination="AUp-5O-Ctk" id="G5C-sf-kMR"/>
             </connections>
         </placeholder>
@@ -28,7 +28,7 @@
                         <constraint firstAttribute="width" priority="500" constant="50" id="uTu-Z4-BIa"/>
                     </constraints>
                 </view>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YTX-Vv-qtQ" customClass="DFSwipableButtonImageView">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YTX-Vv-qtQ" customClass="DFSwipableButtonView">
                     <rect key="frame" x="0.0" y="97" width="600" height="483"/>
                     <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                 </view>
