--- a/strand/iOS/Strand/Strand/DFSelectPhotosViewController.xib
+++ b/strand/iOS/Strand/Strand/DFSelectPhotosViewController.xib
@@ -47,7 +47,7 @@
                             </connections>
                         </button>
                     </subviews>
-                    <color key="backgroundColor" white="1" alpha="0.90000000000000002" colorSpace="calibratedWhite"/>
+                    <color key="backgroundColor" red="0.9137254901960784" green="0.9137254901960784" blue="0.9137254901960784" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="centerX" secondItem="jPE-bF-3RG" secondAttribute="centerX" id="1kp-TB-JTl"/>
                         <constraint firstItem="jPE-bF-3RG" firstAttribute="width" relation="greaterThanOrEqual" secondItem="WID-YJ-lZw" secondAttribute="width" multiplier="0.5" id="JXM-Be-v3p"/>
