--- a/strand/iOS/Strand/Strand/DuffyCore/DFPhotoViewCell.xib
+++ b/strand/iOS/Strand/Strand/DuffyCore/DFPhotoViewCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6250" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -23,13 +23,23 @@
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="I8d-Zy-E5C" userLabel="Count Badge View" customClass="LKBadgeView">
+                    <rect key="frame" x="97" y="1" width="22" height="20"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="20" id="39P-5F-jag"/>
+                        <constraint firstAttribute="width" constant="22" id="mP3-aG-Z4F"/>
+                    </constraints>
+                </view>
             </subviews>
             <constraints>
                 <constraint firstItem="hZx-IC-zZX" firstAttribute="leading" secondItem="1" secondAttribute="leading" constant="4" id="Cuk-8i-yjv"/>
                 <constraint firstAttribute="centerX" secondItem="h88-b8-2wa" secondAttribute="centerX" id="EiX-RP-7kZ"/>
                 <constraint firstAttribute="trailing" secondItem="2gT-dn-UU6" secondAttribute="trailing" id="P3Z-Ut-YxP"/>
+                <constraint firstAttribute="trailing" secondItem="I8d-Zy-E5C" secondAttribute="trailing" constant="1" id="SL1-Fi-9lH"/>
                 <constraint firstAttribute="bottom" secondItem="hZx-IC-zZX" secondAttribute="bottom" constant="4" id="mKA-Pk-OSO"/>
                 <constraint firstAttribute="bottom" secondItem="2gT-dn-UU6" secondAttribute="bottom" id="qgQ-L9-sD2"/>
+                <constraint firstItem="I8d-Zy-E5C" firstAttribute="top" secondItem="1" secondAttribute="top" constant="1" id="r8a-Z7-pCr"/>
                 <constraint firstItem="2gT-dn-UU6" firstAttribute="leading" secondItem="1" secondAttribute="leading" id="wIE-LC-HI3"/>
                 <constraint firstAttribute="centerY" secondItem="h88-b8-2wa" secondAttribute="centerY" id="wwz-Se-zjA"/>
                 <constraint firstItem="2gT-dn-UU6" firstAttribute="top" secondItem="1" secondAttribute="top" id="xez-Rp-y9J"/>
@@ -38,6 +48,7 @@
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
                 <outlet property="badgeLabel" destination="hZx-IC-zZX" id="JwI-L4-3MF"/>
+                <outlet property="countBadgeView" destination="I8d-Zy-E5C" id="QX1-Kf-jcb"/>
                 <outlet property="imageView" destination="2gT-dn-UU6" id="nAC-fk-qaT"/>
                 <outlet property="loadingActivityIndicator" destination="h88-b8-2wa" id="3y9-X2-3eS"/>
             </connections>
