--- a/strand/iOS/Strand/Strand/DFEvaluatedPhotoViewController.xib
+++ b/strand/iOS/Strand/Strand/DFEvaluatedPhotoViewController.xib
@@ -7,14 +7,10 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DFEvaluatedPhotoViewController">
             <connections>
-                <outlet property="likeBarButtonItem" destination="gOI-Kq-Vqs" id="0nC-t1-Fnu"/>
+                <outlet property="commentToolbar" destination="opa-QM-Zd8" id="jXy-O2-nma"/>
                 <outlet property="recipientsProfileStackView" destination="ibH-dU-jON" id="i2l-b0-cYa"/>
-                <outlet property="sendButton" destination="uTO-WJ-lX6" id="OYT-Rx-cPC"/>
                 <outlet property="senderProfileStackView" destination="VOD-io-kg3" id="2Ck-hr-mM8"/>
                 <outlet property="tableView" destination="gGV-RF-dqd" id="e4d-fd-JGr"/>
-                <outlet property="textField" destination="8FO-g3-wd1" id="Js8-RE-Yx5"/>
-                <outlet property="textFieldItem" destination="GWA-hP-Iaq" id="Ddq-kt-hHW"/>
-                <outlet property="toolbar" destination="ahP-4i-91Q" id="BcT-Hu-R7n"/>
                 <outlet property="view" destination="mpa-i4-xv8" id="uaF-md-SiN"/>
             </connections>
         </placeholder>
@@ -24,39 +20,13 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" allowsSelectionDuringEditing="YES" allowsMultipleSelectionDuringEditing="YES" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="gGV-RF-dqd">
-                    <rect key="frame" x="0.0" y="81" width="600" height="519"/>
+                    <rect key="frame" x="0.0" y="81" width="600" height="467"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="YtH-72-Of8"/>
                         <outlet property="delegate" destination="-1" id="kPh-ct-OIy"/>
                     </connections>
                 </tableView>
-                <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ahP-4i-91Q">
-                    <rect key="frame" x="0.0" y="556" width="600" height="44"/>
-                    <items>
-                        <barButtonItem image="Assets/Icons/LikeOnToolbarIcon.png" id="gOI-Kq-Vqs" userLabel="Like Item">
-                            <connections>
-                                <action selector="likeItemPressed:" destination="-1" id="5cf-td-hsa"/>
-                            </connections>
-                        </barButtonItem>
-                        <barButtonItem style="plain" id="GWA-hP-Iaq" userLabel="Text field item">
-                            <textField key="customView" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Add a comment" minimumFontSize="17" id="8FO-g3-wd1">
-                                <rect key="frame" x="60" y="7" width="477" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                                <connections>
-                                    <action selector="textDidChange:" destination="-1" eventType="editingChanged" id="SaN-sO-vAS"/>
-                                </connections>
-                            </textField>
-                        </barButtonItem>
-                        <barButtonItem title="Send" width="38" id="uTO-WJ-lX6" userLabel="Send item">
-                            <connections>
-                                <action selector="sendButtonPressed:" destination="-1" id="jqH-mO-eqL"/>
-                            </connections>
-                        </barButtonItem>
-                    </items>
-                </toolbar>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ibH-dU-jON" customClass="DFProfileStackView">
                     <rect key="frame" x="59" y="23" width="50" height="50"/>
                     <color key="backgroundColor" red="0.90588241820000004" green="0.45490199329999997" blue="0.1215686351" alpha="1" colorSpace="deviceRGB"/>
@@ -82,20 +52,27 @@
                         <action selector="addPersonPressed:" destination="-1" eventType="touchUpInside" id="uph-oH-qs2"/>
                     </connections>
                 </button>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="opa-QM-Zd8" customClass="DFCommentToolbar">
+                    <rect key="frame" x="0.0" y="548" width="600" height="52"/>
+                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="52" id="lDz-K9-AYs"/>
+                    </constraints>
+                </view>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="VOD-io-kg3" firstAttribute="bottom" secondItem="ibH-dU-jON" secondAttribute="bottom" id="3fQ-Z4-E6U"/>
                 <constraint firstAttribute="trailing" secondItem="BV6-BM-Whi" secondAttribute="trailing" constant="8" id="5yi-yO-taK"/>
-                <constraint firstAttribute="bottom" secondItem="gGV-RF-dqd" secondAttribute="bottom" id="81M-RW-Hhu"/>
                 <constraint firstItem="VOD-io-kg3" firstAttribute="leading" secondItem="mpa-i4-xv8" secondAttribute="leading" constant="8" id="9JY-vK-N88"/>
+                <constraint firstAttribute="trailing" secondItem="opa-QM-Zd8" secondAttribute="trailing" id="Cht-pI-f4J"/>
                 <constraint firstItem="VOD-io-kg3" firstAttribute="top" secondItem="mpa-i4-xv8" secondAttribute="top" constant="8" id="Ed5-1o-YVi"/>
-                <constraint firstAttribute="trailing" secondItem="ahP-4i-91Q" secondAttribute="trailing" id="SkN-zI-tV1"/>
+                <constraint firstItem="opa-QM-Zd8" firstAttribute="top" secondItem="gGV-RF-dqd" secondAttribute="bottom" id="Ftf-u0-xc5"/>
+                <constraint firstAttribute="bottom" secondItem="opa-QM-Zd8" secondAttribute="bottom" id="PPK-FG-q4r"/>
+                <constraint firstItem="opa-QM-Zd8" firstAttribute="leading" secondItem="mpa-i4-xv8" secondAttribute="leading" id="SPk-Of-ByB"/>
                 <constraint firstItem="gGV-RF-dqd" firstAttribute="top" secondItem="VOD-io-kg3" secondAttribute="bottom" constant="8" id="WrZ-EP-rZx"/>
                 <constraint firstAttribute="trailing" secondItem="gGV-RF-dqd" secondAttribute="trailing" id="X0I-pQ-m3J"/>
-                <constraint firstAttribute="bottom" secondItem="ahP-4i-91Q" secondAttribute="bottom" id="abf-sI-zaq"/>
                 <constraint firstItem="ibH-dU-jON" firstAttribute="leading" secondItem="VOD-io-kg3" secondAttribute="trailing" constant="1" id="j0x-VC-XdR"/>
-                <constraint firstItem="ahP-4i-91Q" firstAttribute="leading" secondItem="mpa-i4-xv8" secondAttribute="leading" id="jDu-NF-tKC"/>
                 <constraint firstItem="BV6-BM-Whi" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="ibH-dU-jON" secondAttribute="trailing" constant="8" id="kcs-Cc-INU"/>
                 <constraint firstItem="gGV-RF-dqd" firstAttribute="leading" secondItem="mpa-i4-xv8" secondAttribute="leading" id="t59-Ti-M7Q"/>
                 <constraint firstItem="BV6-BM-Whi" firstAttribute="centerY" secondItem="ibH-dU-jON" secondAttribute="centerY" id="vTh-d4-D0T"/>
@@ -105,6 +82,5 @@
     </objects>
     <resources>
         <image name="Assets/Icons/AddPersonButtonIcon.png" width="16" height="16"/>
-        <image name="Assets/Icons/LikeOnToolbarIcon.png" width="16" height="16"/>
     </resources>
 </document>
